fix: add `stretch` property to space
- This feature is an edge case, and is not needed often
- It is used in the new StepIndicator demos

--- a/packages/dnb-eufemia/src/components/space/style/_space.scss
+++ b/packages/dnb-eufemia/src/components/space/style/_space.scss
@@ -157,6 +157,9 @@
       overflow: auto;
     }
   }
+  &--stretch {
+    width: 100%;
+  }
   &--inline {
     display: inline-block;
   }
